# flash_attention_jax

./: .gitignore  README.md  README_CN.md  pyproject.toml
.claude/: settings.local.json
src/flash_attention/: __init__.py  flash_attention_test.py  flash_attention_v1.py  flash_attention_v2.py
src/lib/: stax_plus.py
src/transformers/: mae_utils.py  transformer_flash_v1.py  transformer_flash_v2.py
src/translation/: prepare_ai_challenger.py  translate_denoise_finetune_stax.py  translate_denoise_pretrain_stax.py  translate_stax_flash.py
src/vit/: vit_cifar10_mae_finetune_stax.py  vit_cifar10_mae_pretrain_stax.py  vit_cifar10_stax.py
